<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_HeatPumpDefaultParameters" Id="{9f6c8311-4370-4841-8890-344d838cbcd7}">
    <Declaration><![CDATA[TYPE ST_HeatPumpDefaultParameters :
STRUCT
	aSetPointLimitsTemperature : ARRAY[1..2] OF REAL := [10,100];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>